// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`management API triggers upsert action via change workflow step trigger (experimental) call createNode action for modular content as well when turned on 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "notes": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [
          "n6951be2b_e502_01ed_79a4_80ad776ae16b",
        ],
        "name": "Notes",
        "type": "rich_text",
        "value": "<p>This is a sample notes element with one note component</p>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"component\\" data-codename=\\"n6951be2b_e502_01ed_79a4_80ad776ae16b\\"></object>",
      },
    },
    "id": "dummyId-kontent_item_en-US_eedf0209-989c-4adb-bc83-546e325ab781",
    "internal": Object {
      "contentDigest": "078e059a74504013ff969012958f422e",
      "type": "kontent_item_author",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "author",
      "collection": "default",
      "id": "eedf0209-989c-4adb-bc83-546e325ab781",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "Author",
      "sitemap_locations": Array [],
      "type": "author",
    },
  },
  Object {
    "children": Array [],
    "elements": Object {
      "text": Object {
        "name": "Text",
        "type": "text",
        "value": "Note 1",
      },
    },
    "id": "dummyId-kontent_item_en-US_6951be2b-e502-01ed-79a4-80ad776ae16b",
    "internal": Object {
      "contentDigest": "5897d2b46709c8ea1eaacb0f09314208",
      "type": "kontent_item_note",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "n6951be2b_e502_01ed_79a4_80ad776ae16b",
      "collection": "default",
      "id": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "sitemap_locations": Array [],
      "type": "note",
    },
  },
]
`;

exports[`management API triggers upsert action via change workflow step trigger (experimental) does not call createNode actions when turned off 1`] = `Array []`;

exports[`preview delivery API triggers delete action via archive trigger call deleteNode action for modular content as well 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "text": Object {
        "name": "Text",
        "type": "text",
        "value": "Magic note",
      },
    },
    "id": "d02ab1e7-56d4-588d-9d15-0266a84ec349",
    "internal": Object {
      "contentDigest": "aae62fcb99f01c62256c16f301df2eca",
      "counter": 145,
      "owner": "@kontent-ai/gatsby-source",
      "type": "kontent_item_note",
    },
    "parent": null,
    "preferred_language": "en-US",
    "system": Object {
      "codename": "bcbb41f3_b964_01af_7c70_8384a101bca5",
      "id": "bcbb41f3-b964-01af-7c70-8384a101bca5",
      "language": "en-US",
      "last_modified": "2020-09-23T10:21:25.7632394Z",
      "name": "bcbb41f3-b964-01af-7c70-8384a101bca5",
      "sitemap_locations": Array [],
      "type": "note",
    },
  },
  Object {
    "children": Array [],
    "elements": Object {
      "notes": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [
          "test_note_linekd_inline_kontent_item",
          "bcbb41f3_b964_01af_7c70_8384a101bca5",
        ],
        "name": "Notes",
        "type": "rich_text",
        "value": "<p>Great notes</p>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"component\\" data-codename=\\"bcbb41f3_b964_01af_7c70_8384a101bca5\\"></object>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"link\\" data-codename=\\"test_note_linekd_inline_kontent_item\\"></object>",
      },
    },
    "id": "c415f1ce-6022-5672-8439-04c023ee2184",
    "internal": Object {
      "contentDigest": "f6d6bb19f908369cf2209a6de314000e",
      "counter": 144,
      "owner": "@kontent-ai/gatsby-source",
      "type": "kontent_item_author",
    },
    "parent": null,
    "preferred_language": "en-US",
    "system": Object {
      "codename": "ondrejch_test__copy_",
      "id": "74b9fc6e-b7e2-42a1-a01b-ae6ee69b2174",
      "language": "en-US",
      "last_modified": "2020-09-23T10:21:25.7632394Z",
      "name": "Ondrejch test (copy)",
      "sitemap_locations": Array [],
      "type": "author",
    },
  },
]
`;

exports[`preview delivery API triggers upsert action via upsert trigger call createNode action for modular content as well 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "notes": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [
          "n6951be2b_e502_01ed_79a4_80ad776ae16b",
        ],
        "name": "Notes",
        "type": "rich_text",
        "value": "<p>This is a sample notes element with one note component</p>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"component\\" data-codename=\\"n6951be2b_e502_01ed_79a4_80ad776ae16b\\"></object>",
      },
    },
    "id": "dummyId-kontent_item_en-US_eedf0209-989c-4adb-bc83-546e325ab781",
    "internal": Object {
      "contentDigest": "078e059a74504013ff969012958f422e",
      "type": "kontent_item_author",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "author",
      "collection": "default",
      "id": "eedf0209-989c-4adb-bc83-546e325ab781",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "Author",
      "sitemap_locations": Array [],
      "type": "author",
    },
  },
  Object {
    "children": Array [],
    "elements": Object {
      "text": Object {
        "name": "Text",
        "type": "text",
        "value": "Note 1",
      },
    },
    "id": "dummyId-kontent_item_en-US_6951be2b-e502-01ed-79a4-80ad776ae16b",
    "internal": Object {
      "contentDigest": "5897d2b46709c8ea1eaacb0f09314208",
      "type": "kontent_item_note",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "n6951be2b_e502_01ed_79a4_80ad776ae16b",
      "collection": "default",
      "id": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "sitemap_locations": Array [],
      "type": "note",
    },
  },
]
`;

exports[`production delivery API triggers publish action via publish trigger call createNode action for modular content as well 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "notes": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [
          "n6951be2b_e502_01ed_79a4_80ad776ae16b",
        ],
        "name": "Notes",
        "type": "rich_text",
        "value": "<p>This is a sample notes element with one note component</p>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"component\\" data-codename=\\"n6951be2b_e502_01ed_79a4_80ad776ae16b\\"></object>",
      },
    },
    "id": "dummyId-kontent_item_en-US_eedf0209-989c-4adb-bc83-546e325ab781",
    "internal": Object {
      "contentDigest": "078e059a74504013ff969012958f422e",
      "type": "kontent_item_author",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "author",
      "collection": "default",
      "id": "eedf0209-989c-4adb-bc83-546e325ab781",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "Author",
      "sitemap_locations": Array [],
      "type": "author",
    },
  },
  Object {
    "children": Array [],
    "elements": Object {
      "text": Object {
        "name": "Text",
        "type": "text",
        "value": "Note 1",
      },
    },
    "id": "dummyId-kontent_item_en-US_6951be2b-e502-01ed-79a4-80ad776ae16b",
    "internal": Object {
      "contentDigest": "5897d2b46709c8ea1eaacb0f09314208",
      "type": "kontent_item_note",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "n6951be2b_e502_01ed_79a4_80ad776ae16b",
      "collection": "default",
      "id": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "sitemap_locations": Array [],
      "type": "note",
    },
  },
]
`;

exports[`production delivery API triggers unpublish action via unpublish trigger call deleteNode action for unpublished content item and upsert for related item 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "slug": Object {
        "name": "Slug",
        "type": "url_slug",
        "value": "gatsby",
      },
      "title": Object {
        "name": "Title",
        "type": "text",
        "value": "Gatsby",
      },
    },
    "id": "dummyId-92b8911b-4645-4987-85d6-fea6f52867ef",
    "internal": Object {
      "contentDigest": "dummyContentDigest",
      "counter": 666,
      "owner": "@kontent-ai/gatsby-source",
      "type": "category",
    },
    "parent": null,
    "preferred_language": "en-US",
    "system": Object {
      "codename": "gatsby",
      "collection": "default",
      "id": "92b8911b-4645-4987-85d6-fea6f52867ef",
      "language": "en-US",
      "last_modified": "2020-03-04T14:25:56.7065876Z",
      "name": "Gatsby",
      "sitemap_locations": Array [],
      "type": "category",
      "workflow_step": "archived",
    },
  },
]
`;

exports[`production delivery API triggers unpublish action via unpublish trigger call deleteNode action for unpublished content item and upsert for related item 2`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "category": Object {
        "name": "Category",
        "type": "modular_content",
        "value": Array [],
      },
      "content": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [],
        "name": "Content",
        "type": "rich_text",
        "value": "<p>This is a Gatsby v3 compatible version of the <a href=\\"https://github.com/alxshelepenok/gatsby-starter-lumen\\" data-new-window=\\"true\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">lumen</a> starter, started by the folks at <a href=\\"https://www.gatsbycentral.com/\\" data-new-window=\\"true\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Gatsby Centra</a>l.</p>
<p>Here's a little recommended reading for Gatsby v3.</p>
<ul>
  <li>First, <a href=\\"https://www.gatsbyjs.com/docs/reference/release-notes/migrating-from-v2-to-v3\\">what's new in v3</a></li>
  <li><a href=\\"https://www.gatsbyjs.com/blog/gatsby-v3/\\">The Gatsby v2 announcement blog post</a></li>
</ul>
<p>If you <strong>do decide to upgrade</strong>, these articles will help you do that.</p>
<ul>
  <li><a href=\\"https://www.gatsbyjs.com/docs/reference/release-notes/migrating-from-v2-to-v3#updating-your-dependencies\\">Updating Your Dependencies</a></li>
  <li><a href=\\"https://www.gatsbyjs.com/docs/reference/release-notes/migrating-from-v2-to-v3#handling-breaking-changes\\">Handling Breaking Changes</a></li>
  <li><a href=\\"https://www.gatsbyjs.com/docs/reference/release-notes/migrating-from-v2-to-v3#future-breaking-changes\\">Future Breaking Changes</a></li>
  <li><a href=\\"https://www.gatsbyjs.com/docs/reference/release-notes/migrating-from-v2-to-v3#for-plugin-maintainers\\">For Plugin Maintainers</a></li>
  <li><a href=\\"https://www.gatsbyjs.com/docs/reference/release-notes/migrating-from-v2-to-v3#known-issues\\">Known Issues</a></li>
</ul>
<p>Enjoy!</p>",
      },
      "date": Object {
        "name": "Date",
        "type": "date_time",
        "value": "2020-07-31T00:00:00Z",
      },
      "description": Object {
        "name": "Description",
        "type": "text",
        "value": "This starter has been forked and upgraded to Gatsby v3!",
      },
      "slug": Object {
        "name": "Slug",
        "type": "url_slug",
        "value": "upgraded-to-gatsby-v3",
      },
      "title": Object {
        "name": "Title",
        "type": "text",
        "value": "Upgraded to Gatsby v3",
      },
    },
    "id": "dummyId-kontent_item_en-US_5927f3d3-4fcb-4e2c-8d12-a2954339a87d",
    "internal": Object {
      "contentDigest": "71f32c5c590359ba36456c011e34432b",
      "type": "kontent_item_article",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "upgraded_to_gatsby_v3",
      "collection": "default",
      "id": "5927f3d3-4fcb-4e2c-8d12-a2954339a87d",
      "language": "en-US",
      "last_modified": "2021-08-16T17:34:24.4384786Z",
      "name": "Upgraded to Gatsby v3",
      "sitemap_locations": Array [],
      "type": "article",
      "workflow_step": "published",
    },
  },
]
`;
